# GPL

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bulic32vs2015.bat  bulic64vs2015.bat  changes.txt  vs助手.txt
doc/: odbcconn.doc  通用库（general-purpose library）.xmind
doc/html/: annotated.html  bug.html  class_log.html  classes.html  classgpl_1_1_log-members.html  classgpl_1_1_log.html  classgpl_1_1json-members.html  classgpl_1_1json.html  classgpl_1_1util-members.html  classgpl_1_1util.html  classgpl_1_1xml-members.html  classgpl_1_1xml.html  dir_10c92cca9a932075c4364f1a1d5e2875.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_c19b6a841abffe8b6321cb306a20e7b3.html  dir_e79a1363056ef9b8f9a4d3e9bf13b031.html  dir_f92e94dc7eb36050fc270091fb220b30.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  index.html  json_8h.html  json_8h_source.html  log_8h.html  log_8h_source.html  man.html  man_8h.html  man_8h_source.html  man_source.html  namespacegpl.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  (+11 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enumvalues_0.js  files_2.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_f.js  namespaces_0.js  searchdata.js  typedefs_0.js  (+5 more)
inc/: man
inc/json/: json.h  linkhash.h
inc/log/: log.h
inc/util/: util.h
inc/xml/: xml.h
src/: CMakeLists.txt
src/DataBase/: CMakeLists.txt  DB.cpp  DB.h  HiDB.cpp  HiDB.h  HiDBCommon.cpp  HiDBCommon.h  HiDBFactory.h  HiDBImpl.cpp  HiDBImpl.h  HiDBMacro.h
src/DataBase/MySQL/: HiDBMySQL.cpp
src/DataBase/Oracle/: HiDBOracle.h
src/Sockets/: CMakeLists.txt  Sockets-config.cpp
src/json/: CMakeLists.txt  json.cpp  json.h
src/log/: CMakeLists.txt  log.cpp  log.h  logging.cc  raw_logging.cc  utilities.cc
src/log/windows/: port.cc  port.h
src/log/windows/glog/: logging.h
src/odbc/: CMakeLists.txt
src/sqlite/: CMakeLists.txt
src/util/: CMakeLists.txt  JSON_checker.cpp  parsingargs.cpp  parsingargs.h  stdafx.h  util.cpp  util.h
src/xml/: CMakeLists.txt  xml.cpp  xml.h  xmlIO.c
src/xml/lzma/common/: sysdefs.h
test/: CMakeLists.txt
test/testjson/: CMakeLists.txt  main.cpp  stdafx.h  test.json
test/testlog/: CMakeLists.txt  main.cpp  stdafx.h
test/testutil/: CMakeLists.txt  main.cpp
test/testxml/: CMakeLists.txt  main.cpp  stdafx.h
